# charcoal-slips

./: Cargo.toml  LICENSE  README.md
doc/: config.md  search_replace.md
src/: .autocomplete.rs.swp  ai.rs  autocomplete.rs  config.rs  main.rs  search_replace.rs  syntax_highlights.rs
