[package]
name = "ccslips"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.27.2"
tokio = { version = "1.37", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
regex = "1.10"
walkdir = "2.5"
